--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,3 @@
-PORT = 8080
-# MONGO_URL = mongodb+srv://hakanlsk20@gmail.com:29467585028fb@react-native-full-stack.kjeoshx.mongodb.net/
-MONGO_URL_LOCAL = mongodb://localhost:27017/react-native
-JWT_SECRET = DLASJDKLAJASDLA
+PORT = ***
+# MONGO_URL = mongodb+srv://hakanlsk**@gmail.com:2946****b@react-native-full-stack.kjeoshx.mongodb.net/
+MONGO_URL_LOCAL = mongodb://localhost:270***/react-native
